# Kievits-FASTEM-array-tomography-2024

./: README.md  mito-segmentation-calculate-statistics.ipynb  mito-segmentation-check.ipynb  pyproject.toml
iou_matrices/: iou_matrix_cells_realigned.npy  iou_matrix_cells_rigid.npy  iou_matrix_rp_realigned_box1.npy  iou_matrix_rp_realigned_box2.npy  iou_matrix_rp_rigid_bbox1.npy  iou_matrix_rp_rigid_bbox2.npy
src/: importo.py  performance_metrics.py
