[project]
name = "Kievits-FASTEM-array-tomography-2024"
version = "0.0.1"
authors = [
  { name="Arent Kievits", email="a.j.kievits@tudelft.nl" },
  { name="thopp-tudelft", email="t.r.hoppener@tudelft.nl" },
]
keywords = [
  "segmentation",
  "mitonet"
]
description = "Repository for Python code and JuPyter notebook used for analyzing performance metrics of MitoNet on FAST-EM array tomography data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "napari[all]",
  "webknossos",
  ]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/hoogenboom-group/Kievits-FASTEM-array-tomography-2024"
"Bug Tracker" = "https://github.com/hoogenboom-group/Kievits-FASTEM-array-tomography-2024/issues"
